--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 
     <!-- Espace Publicité -->
     <div id="advertisement">
-        <p>Ajoutez votre publicité ici</p>
-        <a href="http://idrissiseddik.github.io/quran" target="_blank">Visitez ce site</a>
+        <p>Espace Pub - Ajoutez votre publicité ici</p>
+        <a href="http://idrissiseddik.github.io/quran" target="_blank">Cliquez ici pour visiter notre site de Coran</a>
     </div>
 
     <!-- Formulaire WhatsApp -->
