--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
     <!-- Espace Publicité -->
     <div id="advertisement">
-        <p>Espace Pub - Ajoutez votre publicité ici</p>
+        <p>Contactez-nous pour ajouter votre publicité ici</p>
         <a href="http://idrissiseddik.github.io/quran" target="_blank">Cliquez ici pour visiter notre site de Coran</a>
     </div>
 
