--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <!-- Espace Publicité -->
     <div id="advertisement">
         <p>Contactez-nous pour ajouter votre publicité ici</p>
-        <a href="http://idrissiseddik.github.io/quran" target="_blank">Cliquez ici pour visiter notre site du Saint Coran</a>
+        <a href="https://radiocoran.vercel.app" target="_blank">Cliquez ici pour visiter notre site du Saint Coran</a>
     </div>
 
     <!-- Formulaire WhatsApp -->
